# CourseReview

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.js  config.yaml  config.yaml.example  create_admin.py  deploy.sh  dev.sh  docker-compose.yml  entrypoint.sh  hello.py  manage.py  package.json  podman-compose.yaml  pyproject.toml  requirements.txt  ubuntuDataBase.md
.github/workflows/: bot.yaml
.husky/: pre-commit
analytics/: forms.py  tasks.py  views.py
apps/analytics/: tasks.py  views.py
apps/analytics/templates/: dashboard.html  eligible_for_recommendations.html  sentiment_labeler.html
apps/auth/: __init__.py  apps.py  urls.py  utils.py  views.py
apps/recommendations/: admin.py  models.py  tasks.py  views.py
apps/recommendations/migrations/: 0001_initial.py
apps/recommendations/templates/: recommendations.html
apps/spider/: README.md  manager.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/spider/crawlers/: README.md  medians.py  orc.py  timetable.py
apps/spider/migrations/: 0001_initial.py  0002_alter_crawleddata_current_data_and_more.py
apps/verifier/: apps.py  urls.py  views.py
apps/web/: admin.py  api.py  serializers.py  urls.py  views.py
apps/web/models/: course.py  (+9 more)
docs/: Setup.md  Structure.md  auth.md  config.md  setup.md
frontend/: .env.example  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
layup_list/: settings.py
lib/: constants.py  departments.py  logging.py  terms.py
recommendations/: admin.py  models.py
scripts/: __init__.py  deploy.sh  dev.sh  entrypoint.py  entrypoint.sh  migrate_votes_to_rating_system.py  pre-commit-format.py
spider/: apps.py  models.py  views.py
spider/crawlers/: orc.py
testDir/: asgi.py  settings.py  urls.py  wsgi.py
utils/: constants.py  grades.py  logging.py  task_utils.py
web/models/: review.py  student.py  vote.py
website/: __init__.py  asgi.py  celery.py  config.py  development.yaml  settings.py  settings.py.save.1  urls.py  wsgi.py
(+95 files in other folders)
