[project]
name = "course-review"
requires-python = ">=3.13, <3.14"
version = "0.0.1"
dependencies = [
    "beautifulsoup4==4.13.3",
    "dj-database-url==2.3.0",
    "django==5.1.6",
    "django-debug-toolbar==5.0.1",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "bpython==0.26",
    "greenlet==3.2.4",
    "ptpython==3.0.29",
    "djangorestframework==3.16.0",
    "django-cors-headers==4.7.0",
    "django-redis==6.0.0",
    "pyyaml==6.0.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
]
lint = [
    "ruff==0.14.5",
]
